 Bug 465767 -  document.adoptNode() stops working if node was previously adopted in another document, r+sr=bz